--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 .idea
-logs/
+/logs
 *.log
 clover-db
+/rustdesk-server
