处理一些问题。 端口配置

--- a/config.json
+++ b/config.json
@@ -4,6 +4,9 @@
     "127.0.0.1"
   ],
   "debug": false,
-  "reg_server":"",
-  "relay_name":""
+  "reg_server":"127.0.0.1:21120",
+  "relay_name":"go_rust_desk_relay",
+  "server_port": 21116,
+  "relay_port":21117,
+  "reg_port": 21120
 }
