docker build test

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - ./clover-db/:/app/clover-db
     ports:
       - "21115:21115"
-      - "21116:21116"
+      - "21116:21116/tcp"
+      - "21116:21116/udp"
       - "21117:21117"
-      - "21120:21120"
+      - "21120:21120/udp"
