--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -24,4 +24,5 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
+          platforms: linux/amd64,linux/arm64,linux/ppc64le,linux/s390x,linux/386,linux/arm/v7,linux/arm/v6
           tags: danbai225/go-rustdesk-server:latest
